# JomMCP

./: .env.example  .gitignore  .roomodes  LICENSE  PRODUCTION_READINESS_TEST.py  PROJECT_REORGANIZATION_PLAN.md  README.md  REORGANIZATION_COMPLETE.md  check_password.py  docker-compose.yml  pyproject.toml  pytest.ini  quick_service_status.py  requirements.txt  simple_test.py  start_services.py  test_api_gateway.py  test_comprehensive_api_gateway.py  test_e2e_workflow.py  test_end_to_end.py  test_gateway.py  test_setup.py  test_websocket_functionality.py
api-gateway/: Dockerfile  main.py  middleware.py  requirements.txt  routes.py
apps/api-gateway/: Dockerfile  __init__.py  middleware.py  requirements.txt  routes.py  run.py
apps/deployment-service/: Dockerfile  __init__.py  requirements.txt  run.py
apps/deployment-service/app/: main.py
apps/docs-service/: Dockerfile  __init__.py  requirements.txt  run.py
apps/docs-service/app/: __init__.py
apps/generator-service/: Dockerfile  requirements.txt  run.py
apps/generator-service/app/: __init__.py
apps/registration-service/: Dockerfile  requirements.txt  run.py
apps/web-ui/: .env.example  Dockerfile  Dockerfile.dev  LANDING_PAGE_ENHANCEMENTS.md  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
apps/web-ui/src/: middleware.ts
config/: pyproject.toml  requirements-test.txt  requirements.txt
config/development/: .env.example
core/: __init__.py  config.py  database.py  security.py  websocket.py
core/models/: __init__.py  api_registration.py  base.py  deployment.py  user.py
database/migrations/: env.py
deployment-service/: Dockerfile  run.py
deployment-service/app/: __init__.py
deployment-service/app/api/: dependencies.py
deployment-service/app/services/: __init__.py  deployment_manager.py
docs/: HOSTING_GUIDE.md  NGINX_DOMAIN_SETUP.md  architecture.md  download.html
docs-service/: Dockerfile
docs-service/app/: main.py
docs-service/app/api/: dependencies.py
docs/architecture/: API_GATEWAY_FIXES_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  PHASE_1_COMPLETION_REPORT.md  PHASE_3_PROGRESS_REPORT.md  WEBPACK_CACHING_FIXES.md  implementation-guide.md  migration-summary.md
docs/deployment/: README.md
docs/user-guides/: CONTRIBUTING.md  DEVELOPMENT.md  QUICK_SETUP.md  TROUBLESHOOTING.md
generator-service/: __init__.py
generator-service/app/: main.py
generator-service/templates/rest_api_server/: requirements.txt.j2
infrastructure/docker/: alembic.ini  docker-compose.yml
infrastructure/nginx/: README.md  nginx.conf
infrastructure/nginx/conf.d/: jommcp.conf  localhost.conf
infrastructure/nginx/snippets/: proxy-params.conf  security-headers.conf  ssl-params.conf  websocket-params.conf
infrastructure/nginx/ssl/: .gitkeep
migrations/versions/: 001_initial_migration.py
registration-service/: __init__.py  requirements.txt
registration-service/app/: __init__.py  main.py  middleware.py
registration-service/app/api/: dependencies.py
scripts/: clear-build-cache.sh  create-release.sh  dev-setup.sh  download-install.sh  fix-deployment-issues.sh  generate-ssl-cert.sh  health-check.sh  install.sh  nginx-manager.sh  setup-domain.sh  setup-wizard.sh  start-dev-services.sh  start-dev.sh  start-essential-services.sh  status.sh  test-docker-build.sh  test-downloads.sh  test-nginx-setup.sh  test-setup.sh  web-install.sh
tests/: README.md  conftest.py  test_enhanced_features.py
tests/e2e/: PRODUCTION_READINESS_TEST.py
tests/integration/: test_end_to_end.py  test_frontend_integration.py  test_registration_service.py  test_websocket.py
tests/unit/: __init__.py  test_basic.py  test_integration.py  test_phase2_integration.py
web-ui/: next.config.js  package-lock.json  package.json
web-ui/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
web-ui/src/components/: ErrorBoundary.tsx  navigation.tsx
web-ui/src/contexts/: AuthContext.tsx
web-ui/src/hooks/: useWebSocket.ts
web-ui/src/providers/: auth-provider.tsx  query-provider.tsx
web-ui/src/types/: api.ts  auth.ts  mcp.ts
(+146 files in other folders)
